<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookingNow</string>
    
    <string name="menu_btn">菜 单</string>
    <string name="login_btn">登 录</string>
    <string name="logout_btn">退 出</string>
    <string name="order_btn">订 单</string>
    <string name="setting_btn">设 置</string>
    
    <string name="action_settings">Settings</string>
    <string name="account">帐号：</string>  
    <string name="password">密码：</string>  
    <string name="login_title">请先登录</string>
    <string name="confirm">尚未提交的订单更改将丢失</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="waiting">请稍等</string>
    <string name="logining">登录中...</string>
    <string name="connect_fail">无法连接到服务器</string>
    <string name="showOrder">查看订单</string>
    <string name="backHome">返回分类</string>
    <string name="orderTitle">您的订单</string>
    <string name="minusBtn">-</string>
    <string name="addBtn">+</string>
    <string name="hintinmenu">赶紧选择您心爱的美食吧</string>
    <string name="hintinorder">开始点菜</string>
    <string name="newcreate">新建</string>
    <string name="commit">提交</string>
    <string name="modification">修改</string>
    <string name="cancelorder">取消订单</string>
    <string name="commitupdate">提交更改</string>
    <string name="cancelupdate">撤销更改</string>
    <string name="pay">买单</string>
    <string name="finish">交易完成</string>
    <string name="paying">已申请结帐</string>
    <string name="reset">清空</string>
    <string name="commitsuccess">提交成功</string>
    <string name="commitpartsuccess">加工中的食品无法删除或减少数量</string>
    <string name="commitfail">提交失败</string>
    <string name="rememberme">自动登录</string>
    <string name="operationerror">操作失败,请联系我们获取帮助</string>
    <string name="operationfail">操作失败，请检查网络</string>
    
    <string name="order_list_title_table">桌号</string>
    <string name="order_list_title_submitter">提交者</string>
    <string name="order_list_title_status">状态</string>
    <string name="order_list_title_time">更新时间</string>
    <string name="order_list_title_submittime">创建时间</string>
    <string name="order_list_title_customer">客户姓名</string>
    <string name="order_list_title_phone">联系电话</string>
    <string name="order_list_title_count">人数</string>
    <string name="neworderbtn">新建订单</string>
    
    <string name="cookingitem_title_name">菜名</string>
    <string name="cookingitem_title_quantity">数量</string>
    <string name="cookingitem_title_timer">等待时间</string>
    <string name="cookingitem_title_status">状态</string>
    <string name="cookingitem_title_operations">操作</string>
    
    <string name="foodunavailablebtn">缺料</string>
    <string name="freebtn">赠送</string>
    <string name="seatssearchbtn">座位查询</string>
    <string name="orderssearchbtn">订单查询</string>
    <string name="commitwaitingorderbtn">加入我的订单</string>
    <string name="peoplecount">就餐人数</string>
    <string name="phonenumber">手机号码</string>
    <string name="customername">客户名称</string>
    <string name="searchbtn">查询</string>
    <string name="bookingbtn">预订</string>
    <string name="cancelfreebtn">取消赠送</string>
    <string name="seatavailable">找到符合条件的座位:</string>
    <string name="loading">数据加载中...</string>
    <string name="updatemenumessage">检测到菜单有更新，点击确定开始升级菜单</string>
    <string name="updatemenutitle">菜单更新</string>
    
    <string name="service_name">BookingMessageService</string>
    <string name="server_address">服务器地址</string>
    <string name="connect_title">连接至服务器</string>
    <string name="connect_summary">尝试同服务器建立连接</string>
    <string name="connect_btn">连接</string>
    <string name="settings_category_data">数据</string>
    <string name="settings_category_net">网络</string>
    
    
    <drawable name="common_background">#4e72b8</drawable>
    <drawable name="menu_background">#494e8f</drawable>
    
</resources>
