<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".SlideContentLeftMenu">

    <LinearLayout
        android:id="@+id/leftmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers = "middle"
        android:padding="10dp">
		
       <TextView
            android:id="@+id/menu_btn"
		    android:layout_width="match_parent"   
		    android:layout_height="50dp"
		    android:text="@string/menu_btn"
		    android:gravity="center"
		    android:textColor="@android:color/white"
		    android:textAppearance="?android:attr/textAppearanceLarge">  
    	</TextView>
    	<ImageView
     		android:src="@android:drawable/divider_horizontal_dim_dark"
     		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:alpha="0.8"/>
    	<TextView
    	    android:id="@+id/order_btn"
		    android:layout_width="match_parent"   
		    android:layout_height="50dp"
		    android:text="@string/order_btn"  
		    android:gravity="center"  
		    android:textColor="@android:color/white"
		    android:textAppearance="?android:attr/textAppearanceLarge">  
    	</TextView>
    	<ImageView
     		android:src="@android:drawable/divider_horizontal_dim_dark"
     		android:layout_width="match_parent"
     		android:layout_height="wrap_content"
     		android:alpha="0.8"/>
    	<TextView
    	    android:id="@+id/login_btn"
		    android:layout_width="match_parent"   
		    android:layout_height="50dp"
		    android:text="@string/login_btn"  
		    android:gravity="center"
		    android:textColor="@android:color/white"
		    android:textAppearance="?android:attr/textAppearanceLarge">  
    	</TextView>
    	<TextView
    	    android:id="@+id/logout_btn"
		    android:layout_width="match_parent"   
		    android:layout_height="50dp"
		    android:text="@string/logout_btn"  
		    android:gravity="center"  
		    android:textColor="@android:color/white"
		    android:textAppearance="?android:attr/textAppearanceLarge">  
    	</TextView>
    	<ImageView
		    android:src="@android:drawable/divider_horizontal_dim_dark"
		    android:alpha="0.8"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"/>
    	<TextView
    	    android:id="@+id/setting_btn"
		    android:layout_width="match_parent"   
		    android:layout_height="50dp"
		    android:text="@string/setting_btn"  
		    android:gravity="center"  
		    android:textColor="@android:color/white"
		    android:textAppearance="?android:attr/textAppearanceLarge">  
    	</TextView>
        
    </LinearLayout>

</ScrollView>
