<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"  
    android:layout_height="match_parent"
    android:gravity="left"
    android:orientation="vertical" >
    
	<TextView
	    android:layout_width="match_parent"   
	    android:layout_height="wrap_content"   
	    android:layout_marginLeft="20dp"  
	    android:layout_marginRight="20dp"  
	    android:text="@string/account"  
	    android:gravity="left"
	    android:textAppearance="?android:attr/textAppearanceMedium">  
    </TextView>  
      
    <EditText
        android:id="@+id/username" 
        android:layout_height="wrap_content"   
        android:layout_width="match_parent"   
        android:layout_marginLeft="20dp"  
        android:layout_marginRight="20dp"
        android:gravity="fill_horizontal"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearanceMedium">  
    </EditText>
  
    <TextView
	    android:layout_width="match_parent"   
	    android:layout_height="wrap_content"   
	    android:layout_marginLeft="20dp"  
	    android:layout_marginRight="20dp"  
	    android:text="@string/password"
	    android:gravity="left"
	    android:textAppearance="?android:attr/textAppearanceMedium">  
    </TextView>
          
    <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"   
        android:layout_width="match_parent"   
        android:layout_marginLeft="20dp"  
        android:layout_marginRight="20dp"
        android:gravity="fill_horizontal"  
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceMedium">  
    </EditText>
    
    <CheckBox 
	    android:id="@+id/autologin" 
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="20dp"  
        android:layout_marginRight="20dp"
	    android:text="@string/rememberme"
	    android:textAppearance="?android:attr/textAppearanceMedium"
    />
     
</LinearLayout>
